# sudoku

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  logging.h  sudoku.c  sudoku.h  sudoku_common.c  sudoku_common.h
dev/: sudokuCom.py  sudoku_1.txt  sudoku_2.txt
tests/: sudoku_test.cpp
